@@ -1,3 +1,10 @@
+bubba-igd (0.5) vincent hugo; urgency=low
+
+  * Changed syslog levels
+  * Some fragmented cleanup
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Apr 2011 16:52:31 +0200
+
 bubba-igd (0.4) vincent hugo; urgency=low
 
   * Reorder environment modification
